# testpod

./: .dockerignore  Dockerfile  README.md  go.mod  main.go  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: dockerhub.yml  publish.yaml  test.yaml
examples/docker/: docker-compose.yml  docker-stack.yml
examples/kubernetes/: backend.yml  database.yml  frontend.yml  ingress.yml
src/testpod/: main.py
