[project]
name = "testpod"
version = "1.5.0"
description = "A simple web application for container orchestrator testing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "requests>=2.32.3",
    "waitress>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "testpod.main:main"